updates to watchmen

--- a/_posts/2020-05-31-watchmen.md
+++ b/_posts/2020-05-31-watchmen.md
@@ -9,7 +9,7 @@ image: images/posts/watchmen/watchmen.jpg
 layout: post
 ---
 
-Like the rest of the world, I'm still trying to wrap my head around the disaster that is racism in the United States.  As a middle class, educated, relatively insulated, white female, I'm kinda in this situation:
+Like the rest of the world, I'm still trying to wrap my head around the disaster that is law enforcement in the United States.  As a middle class, educated, relatively insulated, white female, I'm kinda in this situation:
 
 
 [![]({{ site.baseurl }}/images/posts/watchmen/helpless.png)](https://twitter.com/badsynthesis/status/1267070910894399489)
@@ -37,7 +37,18 @@ I'm going to assume that most folks who are targeted by prejudiced policing effo
 
 **Internal Complaints**
 
-The agency will usually have an internal affairs department that manages complaints.  Most complaints about unneccessary force administered by a department are then handled by departments within the agency that ... administered the unneccessary force.  Even if they decide that unneccessary force was administered, agencies will explore every possible avenue of internal discipline before firing an officer.  If the officer is fired, it could look like an admission of guilt. This opens up the agency to a lawsuit in which they'd be required to pay financial damages. Case in point: the officer who murdered George Floyd had [19 complaints](https://www.nydailynews.com/news/crime/ny-minneapolis-officer-derek-chauvin-george-floyd-death-19-complains-20200528-2npi7qxbkrgl3oxlzcielnvq3u-story.html) filed against him. 
+The agency will usually have an internal affairs department that manages complaints.  Most complaints about unneccessary force administered by a department are then handled by departments within the agency that ... administered the unneccessary force.  Even if they decide that unneccessary force was administered, agencies will explore every possible avenue of internal discipline before firing an officer.  Case in point: the officer who murdered George Floyd had [19 complaints](https://www.nydailynews.com/news/crime/ny-minneapolis-officer-derek-chauvin-george-floyd-death-19-complains-20200528-2npi7qxbkrgl3oxlzcielnvq3u-story.html) filed against him. 
+
+#### Firing is Pricey
+
+If the officer is fired, it could look like an admission of guilt. This opens up the agency to a lawsuit in which they'd be required to pay financial damages. Even if your complaint is not recognized, you can sue the department for damages in civil courts. Determinations from lawsuits are not considered by internal investigations when deciding whether to discipline an officer. If a police officer is sued, the settlement is normally paid by the law enforcement agency (not the union).  This means that settlements for police brutality are actually paid by taxpayers who fund the law enforcement agency.  In 2019 alone, the [city of Minneapolis paid $20 million in settlements associated with police brutality](https://www.citylab.com/equity/2020/06/police-brutality-lawsuits-cities-settlements-credit-ratings/612301/). In case you thought "maybe this is why police budgets are so high", settlements are usually paid from non-general funds (which are what most of those budget breakdowns represent - this is why it always looks like they're spending nothing on education). 
+
+#### Police Union Protection
+I live in Philadelphia, so let's look at the PPD union contract with the City.  Philly's contract is with the Fraternal Order of the Police, which is a national union with local chapters.  FYI, the president of the Philly chapter makes $180,000 a year. The [15 page, three year agreement starting in 2017](https://www.phila.gov/media/20170815123224/AAA-City-FOP5-Act-111-Award-2017.pdf) expires on June 30, 2020. At the time of writing, the city actually has settled on a new contract. If you want a TL;DR, the agreement details a few paragraphs on vacation time, a couple of clauses about insurance, two paragraphs about discipline, and 10 pages explicitly detailing the City's required investment in Police pensions (contributions to the fund increased 630% between 2001-2016). Why is there so little in the agreement on standards for police behavior?  [Act 111 of 1968](https://www.legis.state.pa.us/CFDOCS/LEGIS/LI/uconsCheck.cfm?txtType=HTM&yr=1968&sessInd=0&smthLwInd=0&act=0111.&CFID=341789689&CFTOKEN=68930824) mitigated the power firefighters and police officers had to strike and required all collective bargaining efforts to go through arbitration. 
+
+**Arbitration** 
+
+If an officer appeals disciplinary action, Act 111 requires the process of determining this discipline go through a (private) arbitration hearing.  Act 111 stipulates that the selected arbitrators are composed of a representative of the government, a representative of the law enforcement agency, and a representative chosen by the defendant. It would behoove the police department to send someone who would defend the officer seeking reinstatement (see: two paragraphs above).  As such, it's highly likely that 2/3 of the arbitrators will be in favor of reinstatement even before arbitration begins. In Philadelphia, the findings and outcomes of these arbitration hearings are not published anywhere. [In many cases](https://www.inquirer.com/news/a/philadelphia-police-problem-union-misconduct-secret-20190912.html), even when a city has had to pay settlements from an officer's actions (remember, the settlement is only decided if the citizen files a lawsuit and it looks like they would win a case), the arbitration process reinstates them. 
 
 ### Within governing bodies
 Most governmental bodies have review or advisory boards, populated either by citizens or appointees of the head of that governmental body.  Philadelphia has a [Police Advisory Commission](https://www.phila.gov/departments/police-advisory-commission/).  The state of Vermont has a [State Police Advisory Commission](https://dps.vermont.gov/committees-boards/spac).  These groups are generally managed and run at the same level of government as the law enforcement agency. The mayor of Philadelphia decides who will be on the Police Advisory Commission.  The City of Minneapolis has a [Civil Rights Commission](http://www.ci.minneapolis.mn.us/boards/civil-rights-comsn), [Police Conduct Oversight Commission](http://www.ci.minneapolis.mn.us/boards/police-conduct-oversight-cmsn), and a [Police Conduct Review Panel](http://www.ci.minneapolis.mn.us/boards/police-conduct-review-panel). Members of these groups are selected by elected government leadership (either the Mayor or City Council). 
@@ -117,6 +128,7 @@ We are not powerless here. Clearly, there is room for progress in law enforcemen
 ### The data needs to be available. 
 - Identify what is missing.  Hold your agencies accountable to make that data available.
    - "Funny story, Mr. Mayor.  I didn't see any Use of Force data for our area reported to the FBI.  Do you know why that is?"
+- Arbitration data - where is it?  
   
 ### The data needs to be used to make decisions.
 -  Analyze complaints.  Are there officers (you'll probably only get a common ID) that have repeated complaints of unnecessary force that aren't held accountable?  Show up at the review board meetings!  
