updates to watchmen

--- a/_posts/2020-05-31-watchmen.md
+++ b/_posts/2020-05-31-watchmen.md
@@ -128,7 +128,8 @@ We are not powerless here. Clearly, there is room for progress in law enforcemen
 ### The data needs to be available. 
 - Identify what is missing.  Hold your agencies accountable to make that data available.
    - "Funny story, Mr. Mayor.  I didn't see any Use of Force data for our area reported to the FBI.  Do you know why that is?"
-- Arbitration data - where is it?  
+- Arbitration data - where is it? I want it.  I want it all. 
+- Settlement data - see above 
   
 ### The data needs to be used to make decisions.
 -  Analyze complaints.  Are there officers (you'll probably only get a common ID) that have repeated complaints of unnecessary force that aren't held accountable?  Show up at the review board meetings!  
