cleaning up randos

--- a/_notebooks/2020-07-01-fear.ipynb
+++ b/_notebooks/2020-07-01-fear.ipynb
@@ -4,14 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Generational Anxiety\n",
-    "> \"The consistency of fear in a world with increasing unknowns\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Generational Anxiety\n",
+    "> \"The consistency of fear in a world with increasing unknowns\"\n",
+    "\n",
     "- toc: true\n",
     "- branch: master\n",
     "- author: Marieke Jackson\n",
@@ -20,6 +15,25 @@
     "- badges: false\n",
     "- hide: true"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import altair as alt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
