--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -12,7 +12,7 @@
     "- categories: [data, non-profits, civic tech]\n",
     "- image: images/posts/datajawn/bees.jpg\n",
     "- badges: false\n",
-    "- hide: true"
+    "- hide: false"
    ]
   },
   {
