--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -380,9 +380,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I was the only \"tech\" person on the team working on those programs.  My plate was full managing the data requirements of both the program and the grant, so I had no extra bandwidth (and definitely did not have the prowess) to develop a method of storing all of our data in house for free. \n",
+    "I was the only \"tech\" person on the team working on those programs.  My plate was full managing the data requirements of both the program and the grant, so I had no extra bandwidth (and definitely did not have the prowess) to develop a tool to manage all of our data for free. \n",
     "\n",
-    "The state employed an IT department, passionate and kind folks who worked to develop and manage solutions in house but who were overwhelmed with the needs of each siloed program. \n",
+    "The state employed an IT department, passionate and kind folks who worked to develop and manage external and in-house solutions but who were overwhelmed with the needs of each siloed program. \n",
     "\n",
     "#### What is the cheapest way to improve access to technology?"
    ]
@@ -488,7 +488,7 @@
    "source": [
     "This is not limited to private industry - tech salaries are consistently higher across all industries!  \n",
     "\n",
-    "Developing a tech solution usually requires more than one "
+    "Developing a tech solution usually requires more than one technologist! If you want to build even a simple app, you need someone to develop it and someone to check the work!"
    ]
   },
   {
