--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -497,7 +497,7 @@
    "source": [
     "## OOTB Solutions\n",
     "\n",
-    "In this situation, every state had a program funded by one of our grants and 22 states had a program funded by the other grant. Because the data we were required to report to the CDC (visit level medical information for each participant) was discrete and consistent, a third party company had actually created an Out-of-the-Box SaaS app for data collection.  \n",
+    "In the example, every state had a program funded by one of our grants and 22 states had a program funded by the other grant. Because the data we were required to report to the CDC (visit level medical information for each participant) was discrete and consistent, a third party company had actually created an Out-of-the-Box SaaS app for data collection.  \n",
     "\n",
     "This solution was not free, unfortunately. \n",
     "\n",
@@ -509,7 +509,7 @@
     "\n",
     "### Customization\n",
     "\n",
-    "We were lucky enough to find a solution that was built _specifically_ for our grant.  This keeps customization costs down.  If you are a program that offers both direct services and general services, who collects data both at the time of service and may need to enter data at a later time, if you need to be able to control access to data at system, form, program levels; you will have a lot of customization work.  \n",
+    "We were lucky enough to find a solution that was built _specifically_ for our grants.  This keeps customization costs down.  If you are a program that offers both direct services and general services, who collects data both at the time of service and may need to enter data at a later time, if you need to be able to control access to data at system, form, and program levels; you will have a lot of customization work.  \n",
     "\n",
     "In this scenario, an OOTB solution may incur more costs than hiring internally. For example, a non-profit looking to use Salesforce but needing specific data fields may incur a lot of customization-related costs just to ensure they are meeting grant requirements!"
    ]
@@ -523,7 +523,7 @@
     "Why should you care about this?  Working in tech isn't perfect, but it's a stable form of employment that pays very well, is in high demand, and allows a lot of us introverts to just solve problems all day!  It's a great gig.\n",
     "\n",
     "## The Tech Divide\n",
-    "In the interest of keeping this brief, there are several arguments for increasing non-profit and government access to up-to-date technologies.\n",
+    "In the interest of keeping this brief, here are two major arguments for increasing non-profit and government access to up-to-date technologies.\n",
     "\n",
     "### Better Data\n",
     "We are recognizing the economic divide in the data created by modern tech.  Tech solutions are built to make _money_. There's no money to be made from populations with lower socioeconomic status.  This means the user data for those solutions does not represent an entire swath of the population!  If you want to build predictive tooling for an entire population, you need equal amounts of data to **represent the entire population**.\n",
