--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -532,7 +532,9 @@
     "If a non-profit is spending 4 hours every week cleaning and preparing data for direct service claims when they can spend 5 minutes making that extract in a BI tool, imagine what they would then do with the extra 203 hours each year.  \n",
     "\n",
     "Non-profits can operate with a similar budget!  By automating simple processes, they have more capacity to do the work that makes their jobs rewarding!\n",
-    "\n"
+    "\n",
+    "### Better Knowledge\n",
+    "Giving programs access to better data collection tools means we will have access to more complete data on issues we are working to resolve (with limited data!).  By encouraging more standardized data collection, we are building capacity for a more complete picture!\n"
    ]
   },
   {
