--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -7,7 +7,7 @@
     "# Non-Profits & Tech\n",
     "> \"Leveling the playing field\"\n",
     "\n",
-    "- toc: false\n",
+    "- toc: true\n",
     "- branch: master\n",
     "- categories: [data, non-profits, civic tech]\n",
     "- image: images/posts/datajawn/bees.jpg\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import altair as alt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a growing disparity in access to tech, and in turn, access to data.  You have to have a certain income to afford a smart phone and a level of understanding to sign up for tech services, yes.  But I'm particularly interested in the disparity in access to tech _across organizations_. Large, for-profit hospitals can afford more expensive electronic health records and billing tools than a small non-profit organization that serves the homeless. This disparity means that organizations serving individuals with low socioeconomic status have limited access to tools that can automate repeating processes, build basic reports, send data extracts to partners and funders, and generally spend less time entering and processing data. "
    ]
   },
   {
@@ -74,8 +81,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SaaS Me If You Can\n",
-    "### Based on a True Story"
+    "# Identifying and Adopting Tech\n",
+    "## SaaS Me If You Can"
    ]
   },
   {
@@ -319,7 +326,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tech Debt"
+    "# The Cost of Tech\n",
+    "## Tech Debt"
    ]
   },
   {
