--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -390,16 +390,17 @@
    "source": [
     "I was the only \"tech\" person on the team working on those programs.  My plate was full managing the data requirements of both the program and the grant, so I had no extra bandwidth (and definitely did not have the prowess) to develop a tool to manage all of our data for free. \n",
     "\n",
-    "The state employed an IT department, passionate and kind folks who worked to develop and manage external and in-house solutions but who were overwhelmed with the needs of each siloed program. \n",
+    "The state employed an IT department, passionate and kind folks who worked to develop and manage external and in-house solutions but who were overwhelmed with the needs of each siloed program.\n",
     "\n",
-    "#### What is the cheapest way to improve access to technology?"
+    "_What is the cheapest way to improve access to technology?_"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Employing Technologists\n",
+    "## In-House Team\n",
+    "\n",
     "Using the same BLS data, I looked at how much it costs to employ a technologist.\n",
     "\n",
     "On average, technologists in any industry make significantly more than an average employee in that industry.  "
@@ -526,22 +527,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Take a Deep Breath\n",
+    "# How Tech Helps\n",
     "\n",
     "Why should you care about this?  Working in tech isn't perfect, but it's a stable form of employment that pays very well, is in high demand, and allows a lot of us introverts to just solve problems all day!  It's a great gig.\n",
     "\n",
-    "## The Tech Divide\n",
-    "In the interest of keeping this brief, here are two major arguments for increasing non-profit and government access to up-to-date technologies.\n",
+    "In the interest of keeping this brief, here are three arguments for increasing non-profit and government access to up-to-date technologies.\n",
     "\n",
-    "### Better Data\n",
+    "## Better Data\n",
     "We are recognizing the economic divide in the data created by modern tech.  Tech solutions are built to make _money_. There's no money to be made from populations with lower socioeconomic status.  This means the user data for those solutions does not represent an entire swath of the population!  If you want to build predictive tooling for an entire population, you need equal amounts of data to **represent the entire population**.\n",
     "\n",
-    "### Better Services\n",
-    "If a non-profit is spending 4 hours every week cleaning and preparing data for direct service claims when they can spend 5 minutes making that extract in a BI tool, imagine what they would then do with the extra 203 hours each year.  \n",
+    "## Better Services\n",
+    "If a non-profit is spending 4 hours every week cleaning and preparing data for direct service claims when they can spend 5 minutes making that extract in a BI tool, imagine what they would then do with the extra 203 hours each year.  Non-profits that offer individual services but use tools like Excel cannot easily see a participant's journey within a program, nonetheless within the organization. Better tech means better service.\n",
     "\n",
     "Non-profits can operate with a similar budget!  By automating simple processes, they have more capacity to do the work that makes their jobs rewarding!\n",
     "\n",
-    "### Better Knowledge\n",
+    "## Better Knowledge\n",
     "Giving programs access to better data collection tools means we will have access to more complete data on issues we are working to resolve (with limited data!).  By encouraging more standardized data collection, we are building capacity for a more complete picture!\n"
    ]
   },
@@ -553,17 +553,29 @@
     "\n",
     "So what can you do?  \n",
     "\n",
-    "## As a citizen\n",
+    "**As a citizen**\n",
     "You may have a local [Code for America brigade](https://brigade.codeforamerica.org/)! Reach out to them.  If you don't, start one! \n",
     "\n",
     "If you're not a technologist, managing a project is absolutely a huge need for these brigades! \n",
     "\n",
-    "## As a non-profit\n",
+    "**As a non-profit**\n",
     "See above :) \n",
     "\n",
-    "## As a tech company\n",
-    "Encourage developers to work on these projects!  Local companies can donate actual developer time to work on projects - these projects don't happen overnight. Increasing volunteer capacity is just as valuable (and, honestly, more valuable) than a financial donation.  \n"
+    "**As a tech company**\n",
+    "Encourage developers to work on these projects!  Local companies can donate actual developer time to work on projects - these projects don't happen overnight. Increasing volunteer capacity is just as valuable (and, honestly, more valuable) than a financial donation.  \n",
+    "\n",
+    "Also, you can do pro bono work yourself!  Are there any non-profits that can benefit from your product?  Can you help them set it up and then offer them access to it for very cheap or free?\n",
+    "\n",
+    "**As a decision maker**\n",
+    "MAKE TECH-SPECIFIC GRANT FUNDING.  STOP SILOING WORK FOR STATE AND CITY LEVEL PROJECTS."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
