added tweet joke

--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -47,7 +47,7 @@
     "We're going to review the cost of different technical solutions non-profits might use, how things like grant structures prohibit them from engaging technology, how that keeps them from doing what they want, and finally what technologists can do to fill the gap and support them.\n",
     "\n",
     "# How to Read this Guide\n",
-    "This post is going to review the cost of different technical solutions non-profits might use, how things like grant structures prohibit them from engaging technology, how that keeps them from doing what they want, and finally what technologists can do to fill the gap and support them.\n",
+    "**This post is going to review the cost of different technical solutions non-profits might use, how things like grant structures prohibit them from engaging technology, how that keeps them from increasing efficiency, and finally what technologists can do to fill the gap and support them.**\n",
     "\n",
     "For non-profits and government agencies, there's not a lot of passive (legal) revenue to the organization, so we're gonna cover that choose-your-own-adventure style.\n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "Services may also come in the form of goods, like yellow silicone bracelets that are $3 beacons of virtue...\n",
     "\n",
-    "\n",
+    ">twitter: https://twitter.com/skinnamarieke/status/1171062154499411968\n",
     "\n",
     "### Grants\n",
     "Grants are a sum of money given to an organization for a specific purpose.  Grants come in two basic flavors: a sweet but tangy public grant or an earthy, umami private grant.  In my experience, private grants are a little less stringent with their requirements but here's a basic breakdown of how to receive and use grant funding.\n",
