updated chart info

--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -108,7 +108,9 @@
     "\n",
     "Because the grant was federally funded but implemented at the state level, the program was responsible for both salary and benefits for all employees.  The Program was also responsible for paying an administrative fee to the state - for using state resources (internet, office space, legal services, etc). \n",
     "\n",
-    "For the sake of easy math, let's say the program was granted $1,000,000."
+    "For the sake of easy math, let's say the program was granted $1,000,000.\n",
+    "\n",
+    "_These charts are interactive, so you can click or hover over them for more info._"
    ]
   },
   {
