--- a/_notebooks/2020-06-15-non-profits.ipynb
+++ b/_notebooks/2020-06-15-non-profits.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "For the sake of easy math, let's say the program was granted $1,000,000.\n",
     "\n",
-    "_These charts are interactive, so you can click or hover over them for more info._"
+    "**_Charts are interactive, so you can click or hover for more info._**"
    ]
   },
   {
